# ansible-podman-quadlets-collection

./: .ansible-lint  .coverage  .gitignore  .yamllint  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  Makefile  README.md  galaxy.yml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
docs/docsite/rst/: examples.rst  getting_started.rst  index.rst
examples/inventory/: hosts.yml
examples/playbooks/: multi-container.yml  single-container.yml
meta/: execution-environment.yml  runtime.yml
molecule/default/: molecule.yml
plugins/filter/: quadlet_filters.py
plugins/module_utils/: podman_quadlets.py
plugins/modules/: podman_quadlet_container.py  podman_quadlet_network.py  podman_quadlet_secret.py  podman_quadlet_volume.py
roles/podman_quadlets/defaults/: main.yml
roles/podman_quadlets/handlers/: main.yml
roles/podman_quadlets/meta/: main.yml
roles/podman_quadlets/tasks/: cleanup.yml  deploy_container.yml  deploy_network.yml  deploy_volume.yml  main.yml  prepare.yml  validate.yml
roles/podman_quadlets/templates/: container.j2  network.j2  volume.j2
tests/integration/targets/podman_quadlet_container/: aliases
tests/integration/targets/podman_quadlet_container/tasks/: main.yml
tests/unit/: requirements.txt
tests/unit/plugins/modules/: test_podman_quadlet_container.py
