[metadata]
name = community.podman_quadlets
author = GlobalBots Team
author_email = team@globalbots.net
description = Ansible Collection for managing Podman containers using Quadlets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/globalbots/ansible-podman-quadlets
project_urls =
    Bug Tracker = https://github.com/globalbots/ansible-podman-quadlets/issues
    Documentation = https://github.com/globalbots/ansible-podman-quadlets/wiki
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.9

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.tox,.eggs
ignore = E203, E266, W503
max-complexity = 10

[tool:pytest]
testpaths = tests
addopts = -v --tb=short --strict-markers --cov=plugins --cov-report=term-missing
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
branch = True
source = plugins/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.: